--- a/notebooks/02_validate_and_save.ipynb
+++ b/notebooks/02_validate_and_save.ipynb
@@ -2,6 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "5fd89ca1-6e3c-4da4-875d-68cca67cd9c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/vamsisaigarapati/Documents/github/nyc_taxi_proj/.venv/bin/python\n"
+     ]
+    }
+   ],
+   "source": [
+    "!which python"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "83d7d4bc-45e9-4ee0-aa62-61e559f05141",
    "metadata": {},
